src/objects/Client_Program__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Account Manager)</relationshipLabel>
        <relationshipName>ProgramsGLhc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <label>Account Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Client_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accrual_Actual_Delta__c</fullName>
        <formula>(Total_Flown_Hours__c / Total_Hours_Accrued_to_date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total flown hours divided by the total number of hours accrued to date. Closer to 100% the better</inlineHelpText>
        <label>Accrual/Actual Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accrual_per_Day__c</fullName>
        <formula>Total_Allotted_Hours__c / ( Contract_Expiration__c - Contract_Start__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates how many hours are accrued per day. Total allotted hours in contract divided by total number of days in contract</inlineHelpText>
        <label>Accrual per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Return_Value__c</fullName>
        <formula>Current_Fair_Market_Value__c - Remarketing_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Market Value - Remarketing Fee</inlineHelpText>
        <label>Actual Return Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlreadyGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlreadyGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Days_Per_contract_year_program_p__c</fullName>
        <label>Annual Days (Per contract year/program p</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Depreciation__c</fullName>
        <formula>(Depreciated_Value__c /  Initial_Asset_Value__c)/(IF(Contract_Expiration__c &lt; TODAY (),Contract_Expiration__c -  Original_purchase_of_asset_Date__c , TODAY () - Original_purchase_of_asset_Date__c )/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Depreciation %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Hours_Contracted__c</fullName>
        <inlineHelpText>(before carry-over)</inlineHelpText>
        <label>Annual Hours Contracted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Membership_Fee__c</fullName>
        <label>Annual Membership Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>FSTR__PCE_Approval__c</referenceTo>
        <relationshipLabel>Client Program</relationshipLabel>
        <relationshipName>CO_Client_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Peak_Day_Email__c</fullName>
        <description>##Conga created btn:00b0P000000NVQu</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[PeakDays2]00O0P000002z6Pv?pv0=&quot; + Operator_Program__c + &quot;,[Contact]00O0P000002z6Q5?pv0=&quot; + Id + &quot;,[CongaPeakDayRules]00O0P000003TTM9?pv0=&quot; + Operator_Program__c +
&quot;&amp;congaemailtemplateid=a1E0P00000JB8dJ&quot; + 
&quot;&amp;emailadditionalto=jennifer@aviationportfolio.com; michelle@aviationportfolio.com&quot; + 
&quot;&amp;emailtoid=003U0000008fmOx&quot; + 
&quot;&amp;emailfromid=0D20P000002ET2z&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <label>Auto Peak Day Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_daily_flight_hrs__c</fullName>
        <formula>Total_Flown_Hours__c /(today()- Contract_Start__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total flown hours to date divided by the number of days in contract to date</inlineHelpText>
        <label>Average daily flight hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Team_Phone_Zoom__c</fullName>
        <label>Booking Team Phone Zoom</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Booking_Team_Phone__c</fullName>
        <label>Booking Team Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Program</relationshipLabel>
        <relationshipName>CO_Client_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carry_Over_Hours_from_previous_years__c</fullName>
        <label>Carry-Over Hours from previous contracts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>FSTR__PCE_Checklist__c</referenceTo>
        <relationshipLabel>Client Program</relationshipLabel>
        <relationshipName>CO_Client_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Notification_Date__c</fullName>
        <formula>IF( Minimum_Commit_Notification_Date__c &gt;= today(), 


(IF(ISBLANK(TEXT(X1st_Client_Decision__c)), X1st_Client_Notification_Date__c ,
   IF( OR(TEXT(X1st_Client_Decision__c) = &quot;YES start the process&quot;, TEXT(X1st_Client_Decision__c) = &quot;NO keep it going&quot;), null , 

    IF(ISBLANK(TEXT( X2nd_Client_Decision__c )),  X2nd_Min_Comm_Client_Notification_Date__c  ,
       IF( OR (TEXT(X2nd_Client_Decision__c) = &quot;YES start the process&quot;,TEXT(X2nd_Client_Decision__c) = &quot;NO keep it going&quot;),null, 

Minimum_Commit_Notification_Date__c ))))),



   ( IF(ISBLANK(TEXT( X1st_Termination_Client_Decision__c )),  X1st_Termniation_Client_Notification_Dat__c  ,
       IF( OR (TEXT(X1st_Termination_Client_Decision__c) = &quot;YES start the process&quot;,TEXT(X1st_Termination_Client_Decision__c) = &quot;NO keep it going&quot;),null,

    IF(ISBLANK(TEXT(  X2nd_Termination_Client_Decision__c  )),   X2nd_Termination_Client_Notification_Dat__c   ,
       IF( OR (TEXT(X2nd_Termination_Client_Decision__c) = &quot;YES start the process&quot;,TEXT(X2nd_Termination_Client_Decision__c) = &quot;NO keep it going&quot;),null,

Termination_Notification_Date__c  ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Program_Status__c</fullName>
        <label>Client Program Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Program</relationshipLabel>
        <relationshipName>CO_Client_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Client Program</relationshipLabel>
        <relationshipName>CO_Client_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conga_Frax_Summary__c</fullName>
        <description>##Conga created button:00b0P000000NSPP</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;reportid=[Periods]00O0P000002yRC7?pv0=&quot; + Name + &quot;,[Transactions]00O0P000002yRCl?pv0=&quot; + Name + &quot;,[FMV]00O0P000002yRDj?pv0=&quot; + Name + &quot;,[Summaries]00O0P000002yREr?pv0=&quot; + Name + &quot;,[Incentives]00O0P000002yUJG?pv0=&quot; + Name + &quot;,[MMF]00O0P000002ychx?pv0=&quot; + Id + &quot;,[Variable]00O0P000002yciq?pv0=&quot; + Id + &quot;,[CurrentYear]00O0P000002yfEC?pv0=&quot; + Name + &quot;,[ALLFMV]00O0P000002yyYz?pv0=,[Lease]00O0P000002z0kY?pv0=&quot; + Id + &quot;,[ProgramYearSumm]00O0P000003TPEE?pv0=&quot; + Id + &quot;,[Owner1Transactions]00O0P000003TX9a?pv0=&quot; + Name + &quot;~pv2=&quot; + Owner_1_Lead_Passengers__c + &quot;,[Owner1Incentives]00O0P000003TXpv?pv0=&quot; + Name + &quot;~pv1=&quot; + Owner_1_Name__c + &quot;,[Owner2Incentive]00O0P000003TXpv?pv0=&quot; + Name + &quot;~pv1=&quot; + Owner_2_Name__c + &quot;,[Owner3Incentive]00O0P000003TXpv?pv0=&quot; + Name + &quot;~pv1=&quot; + Owner_3_Name__c + &quot;,[Owner2Transactions]00O0P000003TX9a?pv0=&quot; + Name + &quot;~pv2=&quot; + Owner_2_Lead_Passengers__c + &quot;,[Owner3Transactions]00O0P000003TX9a?pv0=&quot; + Name + &quot;~pv2=&quot; + Owner_3_Lead_Passengers__c + &quot;,[TransactionReportLas]00O0P000003luwq?pv0=&quot; + Name + &quot;,[LastMonthOwner2Trans]00O0P000003lv2j?pv0=&quot; + Name + &quot;~pv2=&quot; + Owner_2_Lead_Passengers__c + &quot;,[LastMonthOwner1Trans]00O0P000003lv2e?pv0=&quot; + Name + &quot;~pv2=&quot; + Owner_1_Lead_Passengers__c +
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;templategroup=Fractional Summary&quot; + 
&quot;&amp;qmode=Attachments&quot;</formula>
        <label>Conga Frax Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration__c</fullName>
        <label>Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <label>Contract Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracted_Aircraft_Type__c</fullName>
        <label>Contracted Aircraft Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Aircraft_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracted_Cabin_Type__c</fullName>
        <label>Contracted Cabin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cabin_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Fair_Market_Value__c</fullName>
        <inlineHelpText>(does not include remarketing fee)</inlineHelpText>
        <label>Current Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_MMF__c</fullName>
        <inlineHelpText>Grabbing the MMF from the last reconciled MMF transaction</inlineHelpText>
        <label>Current MMF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_OHF__c</fullName>
        <inlineHelpText>Grabbing the OHF from the latest reconciled leg that was not an up/downgrade</inlineHelpText>
        <label>Current OHF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Program_Name__c</fullName>
        <formula>Name&amp;&quot;-&quot;&amp;Program_Name__c&amp;&quot;-&quot;&amp;text(Contracted_Aircraft_Type__c)</formula>
        <label>DB - Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Depreciation_on_Asset__c</fullName>
        <formula>Depreciated_Value__c /(IF(Contract_Expiration__c &lt; TODAY (),Contract_Expiration__c - Original_purchase_of_asset_Date__c , TODAY () - Original_purchase_of_asset_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Depreciation on Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Lease_Amount_on_Asset__c</fullName>
        <formula>Lease_Payments_Made__c / (today()- Contract_Start__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Lease Amount on Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_MMF__c</fullName>
        <formula>MMF_Paid__c / (today()- Contract_Start__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily MMF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_in_Contract__c</fullName>
        <formula>IF(Contract_Expiration__c &lt; TODAY (),Contract_Expiration__c - Contract_Start__c, TODAY () - Contract_Start__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of days from contract start until today&apos;s date. If contract is expired it just counts total number of days that the contract was active.</inlineHelpText>
        <label>Days in Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depreciated_Value__c</fullName>
        <formula>Initial_Asset_Value__c - Current_Fair_Market_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depreciated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Do_not_auto_email_peak_days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not auto email peak days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_email_auto_booked_hours_notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not email auto booked hours notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Queue_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Queue Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Depreciation__c</fullName>
        <label>Estimated Depreciation %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Final_Residual_Asset_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Residual Asset Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Termination_Client_Decision__c</fullName>
        <label>Final Termination Client Decision?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES start the process</fullName>
                </value>
                <value>
                    <fullName>NO keep it going</fullName>
                </value>
                <value>
                    <fullName>TALK LATER about it</fullName>
                </value>
                <value>
                    <fullName>AvP Missed this date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fixed_Cost_Owner_1__c</fullName>
        <inlineHelpText>This is for conga reporting</inlineHelpText>
        <label>Fixed Cost Owner 1 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fixed_Cost_Owner_2__c</fullName>
        <inlineHelpText>This is for conga reporting</inlineHelpText>
        <label>Fixed Cost- Owner 2 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flight_History_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flight History Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Billed_Hours__c</fullName>
        <inlineHelpText>All billed hours minus any hours credits</inlineHelpText>
        <label>Grand Total Billed Hours</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Days_Flown__c</fullName>
        <label>Grand Total Days Flown</label>
        <summarizedField>Client_Program_Year__c.Total_Days_Flown__c</summarizedField>
        <summaryForeignKey>Client_Program_Year__c.Client_Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_or_Dollars_Program__c</fullName>
        <inlineHelpText>This helps CONGA determine which balance alert to send.</inlineHelpText>
        <label>Hours or Dollars Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dollars</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implied_future_flight_hrs_to_contract_ex__c</fullName>
        <formula>Average_daily_flight_hrs__c * Days_in_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implied future flight hrs to contract ex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implied_future_flight_hrs_to_min_commit__c</fullName>
        <formula>Average_daily_flight_hrs__c * ( Minimum_Commitment_Expiration__c - Contract_Start__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implied future flight hrs to min commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive_Information_for_Flight_Strateg__c</fullName>
        <inlineHelpText>This is information for Flight Strategy Calls</inlineHelpText>
        <label>Incentive Info for Flight Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Asset_Value__c</fullName>
        <inlineHelpText>(Including Security Deposit)</inlineHelpText>
        <label>Initial Asset Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_MMF__c</fullName>
        <label>Initial MMF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initiation_Fee__c</fullName>
        <label>Initiation Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Balance_Alert_Sent__c</fullName>
        <label>Last Balance Alert Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Fuel__c</fullName>
        <inlineHelpText>Grabbing latest fuel from latest reconciled transaction that was not up/downgraded</inlineHelpText>
        <label>Latest Fuel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_Statement_Received__c</fullName>
        <inlineHelpText>This field is to help us identify statements that are missing.</inlineHelpText>
        <label>Latest Statement Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Payments_Made__c</fullName>
        <label>Total Lease Payments Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMF_Lease_Fee_per_Hour_Accrued__c</fullName>
        <formula>MMF_per_Hour_Accrued_Hours__c + ( Monthly_Lease_Fee__c *12* Number_of_Years__c )/ Total_Allotted_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MMF and lease fee accrued to date divided by number of contract hours to date</inlineHelpText>
        <label>MMF+Lease Fee per Hour (Accrued)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMF_Lease_Fee_per_Hour_Flown__c</fullName>
        <formula>MMF_per_Hour_Flown_Hours__c + (( Monthly_Lease_Fee__c *12/365)* Days_in_Contract__c)/ Total_Flown_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MMF and lease fee accrued to date divided by total flown hours to date</inlineHelpText>
        <label>MMF + Lease Fee per Hour (Flown)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMF_Paid__c</fullName>
        <label>Grand Total MMF Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMF_Split__c</fullName>
        <inlineHelpText>This is for conga reporting</inlineHelpText>
        <label>MMF Split %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MMF_per_Hour_Accrued_Hours__c</fullName>
        <formula>Total_MMF_Accrued_to_Date__c /  Total_Hours_Accrued_to_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates total MMF paid to date divided by the contract hours to date</inlineHelpText>
        <label>MMF per Hour (Accrued Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMF_per_Hour_Flown_Hours__c</fullName>
        <formula>Total_MMF_Accrued_to_Date__c / Total_Flown_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the total MMF paid to date divided by total flown hours</inlineHelpText>
        <label>MMF per Hour (Flown Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMF_per_Hour_Owned_Hours__c</fullName>
        <formula>(Current_MMF__c  * 12)/  Annual_Hours_Contracted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(MMF*12)/Total Hours Contracted</inlineHelpText>
        <label>MMF per Hour (Owned Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMF_per_hour__c</fullName>
        <formula>MMF_Paid__c / Total_Flown_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMF per hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Membership_Fee_Renewal_Date__c</fullName>
        <label>Membership Fee Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Fee__c</fullName>
        <inlineHelpText>(if any)</inlineHelpText>
        <label>Membership Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Commit_Notification_Date__c</fullName>
        <formula>Minimum_Commitment_Expiration__c -  Operator_Program__r.Days_notice_required_before_auto_renew__c-3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minimum Commit Final Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minimum_Commitment_Expiration__c</fullName>
        <label>Minimum Commitment Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Lease_Fee__c</fullName>
        <inlineHelpText>(fixed throughout life of contract)</inlineHelpText>
        <label>Monthly Lease Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_in_Contract__c</fullName>
        <formula>Days_in_Contract__c /30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an estimate because it assumes 30 days per month.</inlineHelpText>
        <label>Months in Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notifications__c</fullName>
        <label>Notifications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Emailed Specifically for Movement/Tail Notifications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Program_Periods__c</fullName>
        <description>Used in Flow to trigger Prior Program Year Hours Update</description>
        <label>Number of Program Periods</label>
        <summaryForeignKey>Client_Program_Year__c.Client_Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Years__c</fullName>
        <formula>(Contract_Expiration__c -  Contract_Start__c  )/365</formula>
        <label>Number of Years</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator_Contract_Number__c</fullName>
        <inlineHelpText>Operator Contract Number for Invoice</inlineHelpText>
        <label>Operator Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Operator Program</label>
        <referenceTo>Operator_Program__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Client_Programs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Cost__c</fullName>
        <inlineHelpText>Percentage supplied by client.</inlineHelpText>
        <label>Opportunity Cost %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Original_purchase_of_asset_Date__c</fullName>
        <label>Original purchase of asset (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_1_Lead_Passengers__c</fullName>
        <inlineHelpText>Enter each name separated by the vertical line character | with no space in between</inlineHelpText>
        <label>Owner 1 Lead Passengers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_1_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner 1 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Owner 1 Name)</relationshipLabel>
        <relationshipName>Programs9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_1_Share_Special_Notes__c</fullName>
        <label>Owner 1 Share Special Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_1_Split_Share__c</fullName>
        <label>Owner 1 Split Share %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_2_Lead_Passengers__c</fullName>
        <inlineHelpText>Enter each name separated by the vertical line character | with no space in between</inlineHelpText>
        <label>Owner 2 Lead Passengers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_2_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner 2 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Owner 2 Name)</relationshipLabel>
        <relationshipName>ProgramsgKQo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_2_Share_Special_Notes__c</fullName>
        <label>Owner 2 Share Special Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_2_Split_Share__c</fullName>
        <formula>1 - Owner_1_Split_Share__c- Owner_3_Split_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner 2 Split Share %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner_3_Lead_Passengers__c</fullName>
        <inlineHelpText>Enter each name separated by the vertical line character | with no space in between</inlineHelpText>
        <label>Owner 3 Lead Passengers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_3_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner 3 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Owner 3 Name)</relationshipLabel>
        <relationshipName>ProgramsgKRN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_3_Share_Special_Notes__c</fullName>
        <label>Owner 3 Share Special Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_3_Split_Share__c</fullName>
        <label>Owner 3 Split Share %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCE_Definition_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Definition Lookup</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Client Program</relationshipLabel>
        <relationshipName>CO_Client_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCE_Definition__c</fullName>
        <label>Definition</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Name__c</fullName>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_day_email_to_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peak day email to 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Peak day email to 1)</relationshipLabel>
        <relationshipName>Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>